--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "akumaru Robinson",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "fuzzy": "^0.1.3",
     "nodemon": "^2.0.20",
     "telegraf": "^4.11.2"
   }
